--- a/licon_soh.ui
+++ b/licon_soh.ui
@@ -107,7 +107,7 @@
              <property name="maximumSize">
               <size>
                <width>16777215</width>
-               <height>40</height>
+               <height>45</height>
               </size>
              </property>
              <property name="font">
@@ -143,7 +143,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -195,7 +195,7 @@
              <property name="maximumSize">
               <size>
                <width>16777215</width>
-               <height>40</height>
+               <height>45</height>
               </size>
              </property>
              <property name="font">
@@ -314,7 +314,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -444,7 +444,7 @@
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>40</height>
+             <height>45</height>
             </size>
            </property>
            <property name="font">
@@ -497,7 +497,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -589,7 +589,7 @@
              <property name="maximumSize">
               <size>
                <width>16777215</width>
-               <height>40</height>
+               <height>45</height>
               </size>
              </property>
              <property name="font">
@@ -642,7 +642,7 @@
              <property name="maximumSize">
               <size>
                <width>16777215</width>
-               <height>40</height>
+               <height>45</height>
               </size>
              </property>
              <property name="font">
@@ -749,7 +749,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -778,7 +778,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -957,7 +957,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -986,7 +986,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
@@ -1195,7 +1195,7 @@
               <font>
                <family>微软雅黑</family>
                <pointsize>10</pointsize>
-               <bold>true</bold>
+               <bold>false</bold>
               </font>
              </property>
              <property name="text">
